k8s/base/space/load-balancer-deployment/ingress-space-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-backend-ingress
  namespace: socialbeats
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: space.socialbeats.es
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-service
                port:
                  number: 3000
