k8s/base/space/load-balancer-deployment/ingress-space-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-frontend-ingress
  namespace: socialbeats
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - space.socialbeats.es
      secretName: space-frontend-tls-secret
  rules:
    - host: space.socialbeats.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 5050
