k8s/base/space/load-balancer-deployment/ingress-ws.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-ws-ingress
  namespace: socialbeats
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - space.socialbeats.es
      secretName: space-ws-tls-secret
  rules:
    - host: space.socialbeats.es
      http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 3000
